--- a/src/view/admin.html
+++ b/src/view/admin.html
@@ -15,7 +15,7 @@
 
 <body style="overflow-x: hidden;">
   <div class="container">
-    <a name="" id="" class="btn btn-info btn-sm" href="index.html" role="button">Trang chủ</a>
+    <a name="" id="" class="btn btn-info btn-sm" href="../../index.html" role="button">Trang chủ</a>
     <h4>Admin page</h4>
     <h1>Quản lý sản phẩm</h1>
     <div class="d-flex justify-content-between" style="align-items: center;">
